#25 feat: StarRating 컴포넌트 로직 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,7 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-/* 
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -63,4 +63,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-} */
+}
