--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,15 @@
   .caption-10-regular {
     @apply text-[10px]/[140%] tracking-[-0.3px] font-normal;
   }
+  .text-stroke {
+    text-shadow: 0.5px 0.5px 0 white,
+                 -0.5px 0.5px 0 white,
+                 -0.5px -0.5px 0 white,
+                 0.5px -0.5px 0 white
+  }
+  .pin-shadow {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); /* 예시값, Figma에 맞게 조절하세요 */
+  }
 }
 
 :root {
