--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,6 +59,21 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+}
+
+.animation-bounce {
+  animation: bounce 1s 10;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
