--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,7 +49,7 @@
                  0.5px -0.5px 0 white
   }
   .pin-shadow {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); /* 예시값, Figma에 맞게 조절하세요 */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
   }
 }
 
