fix: 터치 하이라이트 제거

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,9 @@
 @layer base {
   * {
     -webkit-user-drag: none;
+    -webkit-tap-highlight-color: transparent;
   }
+
   li {
     @apply list-none;
   }
